--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -3,19 +3,26 @@
 <head th:replace="fragments :: head"></head>
 <body class="container">
 
-<h1>Create Event</h1>
+<h1 class="text-center">Create Event</h1>
 
-<nav th:replace="fragments :: navigation"></nav>
+<nav th:replace="fragments :: header"></nav>
 
 <form method="post">
-    <div class="form-group">
-        <label>Name
+<!--    <div class="row">-->
+    <div class="form-group col">
+        <label><strong>Name</strong>
             <input type="text" name="eventName" class="form-control">
         </label>
     </div>
-    <div class="form-group">
+    <div class="form-group row">
+        <label ><strong>Description of Event</strong>
+            <textarea rows="3" type="text" name="eventDescription" class="form-control"></textarea>
+        </label>
+    </div>
+    <div class="form-group text-center">
         <input type="submit" value="Create Event" class="btn btn-success">
     </div>
+<!--    </div>-->
 </form>
 
 </body>
