--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -9,18 +9,12 @@
 <body>
 
 <nav th:fragment="header">
-<!--    <h1 th:text="${title}">Coding Events</h1>-->
-    <hr>
-    <ul class="nav justify-content-center">
+    <h1 th:text="${title}">Coding Events</h1>
+    <ul class="nav">
         <li class="nav-item"><a class="nav-link" href="/events">All Events</a></li>
         <li class="nav-item"><a class="nav-link" href="/events/create">Create Event</a></li>
     </ul>
-    <hr>
 </nav>
-
-<div th:fragment="address">
-    <p>4811 Delmar Blvd., St. Louis 63108</p>
-</div>
 
 </body>
 </html>
