--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org/">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 <body class="container">
 
-<h1 class="text-center">Create Event</h1>
-
-<nav th:replace="fragments :: header"></nav>
+<header th:replace="fragments :: header"></header>
 
 <form method="post">
-<!--    <div class="row">-->
-    <div class="form-group col">
-        <label><strong>Name</strong>
+    <div class="form-group">
+        <label> Name
             <input type="text" name="eventName" class="form-control">
         </label>
     </div>
-    <div class="form-group row">
-        <label ><strong>Description of Event</strong>
-            <textarea rows="3" type="text" name="eventDescription" class="form-control"></textarea>
-        </label>
+    <br>
+    <div class="form-group">
+        <input type="submit" value="Create" class="btn btn-success">
     </div>
-    <div class="form-group text-center">
-        <input type="submit" value="Create Event" class="btn btn-success">
-    </div>
-<!--    </div>-->
 </form>
 
 </body>
