finished model property video

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -8,12 +8,14 @@
 </head>
 <body>
 
-<nav th:fragment="header">
+<nav th:fragment="header" class="text-center">
     <h1 th:text="${title}">Coding Events</h1>
-    <ul class="nav">
+    <hr>
+    <ul class="nav justify-content-center">
         <li class="nav-item"><a class="nav-link" href="/events">All Events</a></li>
         <li class="nav-item"><a class="nav-link" href="/events/create">Create Event</a></li>
     </ul>
+    <hr>
 </nav>
 
 </body>
