--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -11,6 +11,11 @@
             <input type="text" name="eventName" class="form-control">
         </label>
     </div>
+    <div class="form-group row">
+        <label> Description
+            <textarea type="text" name="eventDescription" class="form-control"></textarea>
+        </label>
+    </div>
     <br>
     <div class="form-group">
         <input type="submit" value="Create" class="btn btn-success">
