--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -8,12 +8,12 @@
 <form method="post">
     <div class="form-group">
         <label>Name
-            <input type="text" name="eventName" class="form-control">
+            <input type="text" name="name" class="form-control">
         </label>
     </div>
     <div class="form-group row">
         <label>Description
-            <textarea type="text" name="eventDescription" class="form-control"></textarea>
+            <textarea type="text" name="description" class="form-control"></textarea>
         </label>
     </div>
     <div class="form-group">
