--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -13,7 +13,7 @@
     </div>
     <div class="form-group row">
         <label>Description
-            <textarea type="text" name="description" class="form-control"></textarea>
+            <input type="text" name="description" class="form-control">
         </label>
     </div>
     <div class="form-group">
