--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -16,6 +16,11 @@
             <textarea type="text" name="description" class="form-control"></textarea>
         </label>
     </div>
+    <div class="form-group row">
+        <label>Contact Email
+            <textarea type="text" name="contactEmail" class="form-control"></textarea>
+        </label>
+    </div>
     <div class="form-group">
         <input type="submit" value="Create" class="btn btn-success">
     </div>
