--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -5,23 +5,24 @@
 
 <header th:replace="fragments :: header"></header>
 
-<p th:text="${errorMsg}" style="color:red;"></p>
-
 <form method="post">
     <div class="form-group">
         <label>Name
-            <input type="text" name="name" class="form-control">
+            <input th:field="${event.name}" class="form-control" />
         </label>
+        <p class="error" th:errors="${event.name}"></p>
     </div>
     <div class="form-group row">
         <label>Description
-            <textarea type="text" name="description" class="form-control"></textarea>
+            <input th:field="${event.description}" class="form-control" />
         </label>
+        <p class="error" th:errors="${event.description}"></p>
     </div>
-    <div class="form-group row">
+    <div class="form-group">
         <label>Contact Email
-            <textarea type="text" name="contactEmail" class="form-control"></textarea>
+            <input th:field="${event.contactEmail}" class="form-control" />
         </label>
+        <p class="error" th:errors="${event.contactEmail}"></p>
     </div>
     <div class="form-group">
         <input type="submit" value="Create" class="btn btn-success">
