--- a/src/main/resources/templates/events/create.html
+++ b/src/main/resources/templates/events/create.html
@@ -12,11 +12,29 @@
         </label>
         <p class="error" th:errors="${event.name}"></p>
     </div>
+    <div class="form-group">
+        <label>Event Location
+            <input th:field="${event.eventLocation}" class="form-control" />
+        </label>
+        <p class="error" th:errors="${event.eventLocation}"></p>
+    </div>
     <div class="form-group row">
         <label>Description
             <input th:field="${event.description}" class="form-control" />
         </label>
         <p class="error" th:errors="${event.description}"></p>
+    </div>
+    <div class="form-group">
+        <label>Number of Attendees
+            <input th:field="${event.numberOfAttendees}" class="form-control" />
+        </label>
+        <p class="error" th:errors="${event.numberOfAttendees}"></p>
+    </div>
+    <div class="form-group">
+        <label>Is Attendee Registered?
+            <input th:field="${event.registered}" class="form-control" />
+        </label>
+        <p class="error" th:errors="${event.registered}"></p>
     </div>
     <div class="form-group">
         <label>Contact Email
