--- a/src/main/resources/templates/events/index.html
+++ b/src/main/resources/templates/events/index.html
@@ -10,14 +10,20 @@
     <tr>
         <th>ID</th>
         <th>Name</th>
+        <th>Event Location</th>
         <th>Description</th>
+        <th>Registered?</th>
+        <th># of Attendees</th>
         <th>Contact Email</th>
     </tr>
     </thead>
     <tr th:each="event : ${events}">
         <td th:text="${event.id}"></td>
         <td th:text="${event.name}"></td>
+        <td th:text="${event.eventLocation}"></td>
         <td th:text="${event.description}"></td>
+        <td th:text="${event.registered}"></td>
+        <td th:text="${event.numberOfAttendees}"></td>
         <td th:text="${event.contactEmail}"></td>
     </tr>
 </table>
